# scan-tool

./: .gitignore  README.md  config.ini.default  pyproject.toml
scanTool/: main.py  scan_struct.py
tests/: conftest.py  example.env  test_main.py
